feat: student endpoints
